Added Identity scaffhold

--- a/Nauktion/Views/Shared/_Layout.cshtml
+++ b/Nauktion/Views/Shared/_Layout.cshtml
@@ -23,11 +23,11 @@
     <div class="container">
         <div class="header clearfix">
             <nav>
+                <partial name="_LoginPartial" />
                 <ul class="nav nav-pills pull-right">
                     <li role="presentation" class="active"><a asp-controller="Home" asp-action="Index">Auktioner</a></li>
                     <li role="presentation"><a asp-controller="Home" asp-action="About">Om Nauktion</a></li>
                     <li role="presentation"><a asp-controller="Home" asp-action="Contact">Kontakta oss</a></li>
-                    <li role="presentation" class="disabled" title="Not yet implemented!"><a>Logga in</a></li>
                 </ul>
             </nav>
             <h3 class="text-muted">Nauktion</h3>
