Refractored db namespaces

--- a/Nauktion/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<NauktionUser> SignInManager
+﻿@using Nauktion.Models
+@inject SignInManager<NauktionUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
