Försvenskade massa texter

--- a/Nauktion/Views/Home/About.cshtml
+++ b/Nauktion/Views/Home/About.cshtml
@@ -1,7 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Om Nauktion";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h3>Information om hemsidan</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Låt oss sätta upp det konkret:</p>
+
+<ul>
+    <li>Bra skit</li>
+    <li>Du kan buda på grejer</li>
+    <li>Coola kidsen kan göra nya auktioner (coming soon to a theather near you)</li>
+    <li>Bra skit</li>
+</ul>
+
+<p>Vill du veta mer? Besök <a href="https://facebook.se/nauktion" onclick="window.open('http://www.sanger.dk/', '_blank'); return false;">vår Facebook sida <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>.</p>
