--- a/Nauktion/Views/Home/Contact.cshtml
+++ b/Nauktion/Views/Home/Contact.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Kontakta oss";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h3>Ha! Du trodde</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<p>
+    Vi på Nauktion har valt att inte föra kommunikation med lägre stående varelser.
+</p>
+<p>
+    Behöver du hjälp? <strong>Ring polia.</strong>
+</p>
+<p>
+    Har du ett klagomål? <strong>Synd.</strong>
+</p>
