--- a/Nauktion/Views/Home/Privacy.cshtml
+++ b/Nauktion/Views/Home/Privacy.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Integritetspolicy";
 }
 <h2>@ViewData["Title"]</h2>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Det står inget här just nu. Det var inte med i uppgiften ändå.</p>
+<p>Läs gärna det här och skaka sådär jättelite på huvudet i förståelse som att du skulle läsa en ytterst utförlig och nyanserad integritetspolicy.
+    Du kan hålla om din haka också för att se ännu mer fokuserad på denna djupa läsning.</p>
+<p>Tack för din inlevelse. Nu kan du gå tillbaka till hemsidan genom att <a asp-controller="Home" asp-action="Index" title="❤️">klicka här</a>.</p>
