--- a/Nauktion/Views/Shared/_Layout.cshtml
+++ b/Nauktion/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <partial name="_LoginPartial" />
                 <ul class="nav nav-pills pull-right">
                     <li role="presentation" class="active"><a asp-controller="Home" asp-action="Index">Auktioner</a></li>
-                    <li role="presentation"><a asp-controller="Home" asp-action="About">Om Nauktion</a></li>
+                    <li role="presentation"><a asp-controller="Home" asp-action="About">Info</a></li>
                     <li role="presentation"><a asp-controller="Home" asp-action="Contact">Kontakta oss</a></li>
                 </ul>
             </nav>
