--- a/Nauktion/Views/Shared/_CookieConsentPartial.cshtml
+++ b/Nauktion/Views/Shared/_CookieConsentPartial.cshtml
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#cookieConsent .navbar-collapse">
-                    <span class="sr-only">Toggle cookie consent banner</span>
+                    <span class="sr-only">Göm den här grejen</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -24,8 +24,8 @@
                     Use this space to summarize your privacy and cookie use policy.
                 </p>
                 <div class="navbar-right">
-                    <a asp-controller="Home" asp-action="Privacy" class="btn btn-info navbar-btn">Learn More</a>
-                    <button type="button" class="btn btn-default navbar-btn" data-cookie-string="@cookieString">Accept</button>
+                    <a asp-controller="Home" asp-action="Privacy" class="btn btn-info navbar-btn">Fett mycket info här</a>
+                    <button type="button" class="btn btn-default navbar-btn" data-cookie-string="@cookieString">Blint acceptera</button>
                 </div>
             </div>
         </div>
