--- a/Nauktion/Views/Shared/_LoginPartial.cshtml
+++ b/Nauktion/Views/Shared/_LoginPartial.cshtml
@@ -4,16 +4,14 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
-        <ul class="nav nav-pills pull-right">
-            <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hej, @UserManager.GetUserName(User)!</a>
-            </li>
-            <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Logga ut</button>
-            </li>
-        </ul>
-    </form>
+    <ul class="nav nav-pills pull-right">
+        <li>
+            <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hej, @UserManager.GetUserName(User)!</a>
+        </li>
+        <li>
+            <a asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home")">Logga ut</a>
+        </li>
+    </ul>
 }
 else
 {
