Fixed layout some

--- a/Nauktion/Views/Shared/_Layout.cshtml
+++ b/Nauktion/Views/Shared/_Layout.cshtml
@@ -25,12 +25,11 @@
             <nav>
                 <partial name="_LoginPartial" />
                 <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a asp-controller="Home" asp-action="Index">Auktioner</a></li>
                     <li role="presentation"><a asp-controller="Home" asp-action="About">Info</a></li>
                     <li role="presentation"><a asp-controller="Home" asp-action="Contact">Kontakta oss</a></li>
                 </ul>
             </nav>
-            <h3 class="text-muted">Nauktion</h3>
+            <a class="navbar-brand" asp-controller="Home" asp-action="Index">Nauktion</a>
         </div>
 
         <div class="row marketing">
