Försvenskade massa mer

--- a/Nauktion/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model AccessDeniedModel
 @{
-    ViewData["Title"] = "Access denied";
+    ViewData["Title"] = "Åtkomst nekad";
+    ViewData["Message"] = "Du har inte tillgång till denna resurs."
 }
 
-<header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
-</header>
+<p>
+    <a asp-controller="Home" asp-action="Index">Klicka här</a> för att återgå till startsidan.
+</p>
