--- a/Nauktion/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,12 +1,10 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Glömt ditt lösenord?";
+    ViewData["Message"] = "Ange din e-post adress.";
 }
 
-<h2>@ViewData["Title"]</h2>
-<h4>Enter your email.</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
