--- a/Nauktion/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Glömt lösenord? - Mail skickat!";
+    ViewData["Message"] = "Var god kolla ditt e-post konto för återställningslänken.";
 }
 
-<h2>@ViewData["Title"]</h2>
 <p>
-    Please check your email to reset your password.
+    <a asp-controller="Home" asp-action="Index">Klicka här</a> för att återgå till startsidan.
 </p>
 
