--- a/Nauktion/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,12 +1,10 @@
 ﻿@page
 @model ResetPasswordModel
 @{
-    ViewData["Title"] = "Reset password";
+    ViewData["Title"] = "Återställ lösenord";
+    ViewData["Message"] = "Glömt ditt lösenord? Återställ det här nedan.";
 }
 
-<h2>@ViewData["Title"]</h2>
-<h4>Reset your password.</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
