--- a/Nauktion/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model ResetPasswordConfirmationModel
 @{
-    ViewData["Title"] = "Reset password confirmation";
+    ViewData["Title"] = "Lösenord återställt";
+    ViewData["Message"] = "Ditt lösenord har blivit återställt.";
 }
 
-<h2>@ViewData["Title"]</h2>
 <p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
+    <a asp-area="Identity" asp-page="/Account/Login">Klicka här</a> för att logga in igen.
 </p>
