--- a/Nauktion/Views/Auktion/Index.cshtml
+++ b/Nauktion/Views/Auktion/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Auktioner";
+    ViewData["Message"] = "Välj en auktion för att börja buda.";
 
     var list1 = Model.EveryOther();
     var list2 = Model.Skip(1).EveryOther();
