--- a/Nauktion/Views/Home/About.cshtml
+++ b/Nauktion/Views/Home/About.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Om Nauktion";
+    ViewData["Message"] = "Information om hemsidan";
 }
-<h2>@ViewData["Title"]</h2>
-<h4>Information om hemsidan</h4>
 
 <p>Låt oss sätta upp det konkret:</p>
 
