--- a/Nauktion/Views/Home/Contact.cshtml
+++ b/Nauktion/Views/Home/Contact.cshtml
@@ -1,9 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Kontakta oss";
+    ViewData["Message"] = "Ha! Du trodde";
 }
-<h2>@ViewData["Title"]</h2>
-<h4>Ha! Du trodde</h4>
-
 
 <p>
     Vi på Nauktion har valt att inte föra kommunikation med lägre stående varelser.
