--- a/Nauktion/Views/Home/Index.cshtml
+++ b/Nauktion/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
+    Layout = "_LayoutWithoutHeader";
     ViewData["Title"] = "Registrera dig idag!";
 }
-    
+
 <div class="jumbotron">
     <h1>Börja buda på auktioner!</h1>
     <p class="lead">Gå med i hemsidan för att vara med och buda på våra kalas auktioner REDAN IDAG! WOAO</p>
