--- a/Nauktion/Views/Shared/Error.cshtml
+++ b/Nauktion/Views/Shared/Error.cshtml
@@ -1,10 +1,12 @@
 ﻿@model ErrorViewModel
 @{
+    Layout = "_LayoutWithoutHeader";
     ViewData["Title"] = "Error";
+    ViewData["Message"] = "An error occurred while processing your request.";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">@ViewData["Title"]</h1>
+<h2 class="text-danger">@ViewData["Message"]</h2>
 
 @if (Model.ShowRequestId)
 {
