--- a/Nauktion/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,12 +1,9 @@
 ﻿@page
 @model ExternalLoginModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Registrera nytt konto";
+    ViewData["Message"] = "Koppla ihop ditt " + Model.LoginProvider + " konto.";
 }
-
-<h2>@ViewData["Title"]</h2>
-<h4>Associate your @Model.LoginProvider account.</h4>
-<hr />
 
 <p class="text-info">
     You've successfully authenticated with <strong>@Model.LoginProvider</strong>.
