--- a/Nauktion/Areas/Identity/Pages/Account/Lockout.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/Lockout.cshtml
@@ -1,10 +1,14 @@
 ﻿@page
 @model LockoutModel
 @{
-    ViewData["Title"] = "Locked out";
+    ViewData["Title"] = "Utelåst";
 }
 
 <header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <h4 class="text-danger">@ViewData["Title"]</h4>
+    <p class="text-danger">Detta konto har blivit låst. Var god försök igen senare.</p>
 </header>
+
+<p>
+    <a asp-controller="Home" asp-action="Index">Klicka här</a> för att återgå till startsidan.
+</p>
