--- a/Nauktion/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,12 +2,11 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Logga in";
 }
 
-<h2>@ViewData["Title"]</h2>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-5">
         <section>
             <form method="post">
                 <h4>Use a local account to log in.</h4>
@@ -45,7 +44,7 @@
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    <div class="col-md-6 col-md-offset-1">
         <section>
             <h4>Use another service to log in.</h4>
             <hr />
