--- a/Nauktion/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -1,15 +1,10 @@
 ﻿@page
 @model LoginWithRecoveryCodeModel
 @{
-    ViewData["Title"] = "Recovery code verification";
+    ViewData["Title"] = "Två-faktor authentikering";
+    ViewData["Message"] = "Ange en två-faktor authentikerings reservkod för att logga in.";
 }
 
-<h2>@ViewData["Title"]</h2>
-<hr />
-<p>
-    You have requested to log in with a recovery code. This login will not be remembered until you provide
-    an authenticator app code at log in or disable 2FA and log in again.
-</p>
 <div class="row">
     <div class="col-md-4">
         <form method="post">
