--- a/Nauktion/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,10 +1,13 @@
 ﻿@page
 @model LogoutModel
 @{
-    ViewData["Title"] = "Log out";
+    ViewData["Title"] = "Logga ut";
+    ViewData["Message"] = "Du har nu blivit utloggad.";
 }
 
-<header>
-    <h1>@ViewData["Title"]</h1>
-    <p>You have successfully logged out of the application.</p>
-</header>
+<p>
+    <a asp-controller="Home" asp-action="Index">Klicka här</a> för att återgå till startsidan.
+</p>
+<p>
+    <a asp-area="Identity" asp-page="/Account/Login">Klicka här</a> för att logga in igen.
+</p>
