--- a/Nauktion/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,16 +1,12 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Registrera nytt konto";
 }
-
-<h2>@ViewData["Title"]</h2>
 
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
-            <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
@@ -27,7 +23,14 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Register</button>
+            <div class="form-group">
+                <button type="submit" class="btn btn-default">Register</button>
+            </div>
+            <div class="form-group">
+                <p>
+                    Already a member? <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Login here.</a>
+                </p>
+            </div>
         </form>
     </div>
 </div>
