Fighting with authentication Main villain was the AddDefaultIdentity in the IdentityHostingStartup https://github.com/aspnet/Identity/issues/1813#issuecomment-394455842

--- a/Nauktion/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -2,7 +2,7 @@
 @model AccessDeniedModel
 @{
     ViewData["Title"] = "Åtkomst nekad";
-    ViewData["Message"] = "Du har inte tillgång till denna resurs."
+    ViewData["Message"] = "Du har inte tillgång till denna resurs.";
 }
 
 <p>
