--- a/Nauktion/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/Nauktion/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -2,7 +2,7 @@
 @model LoginWith2faModel
 @{
     ViewData["Title"] = "Två-faktor authentikering";
-    ViewData["Message"] = "Ditt konto är låst via en authentikeringsapp. Ange authentikeringskoden nedan."
+    ViewData["Message"] = "Ditt konto är låst via en authentikeringsapp. Ange authentikeringskoden nedan.";
 }
 
 <div class="row">
