--- a/Nauktion/Views/Auktion/_AuktionPreviewPartialView.cshtml
+++ b/Nauktion/Views/Auktion/_AuktionPreviewPartialView.cshtml
@@ -1,4 +1,6 @@
 ﻿@model AuktionModel
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+
+<div>
+    <strong>@Model.Titel</strong>
+    @Model.Beskrivning
+</div>
