--- a/Nauktion/Views/Auktion/Index.cshtml
+++ b/Nauktion/Views/Auktion/Index.cshtml
@@ -8,16 +8,18 @@
     var list2 = Model.Skip(1).EveryOther();
 }
 
-<div class="col-lg-6">
-    @foreach (AuktionModel m in list1)
-    {
-        <partial name="_AuktionPreviewPartialView" model="@m"/>
-    }
-</div>
+<div class="row">
+    <div class="col-sm-6">
+        @foreach (AuktionModel m in list1)
+        {
+            <partial name="_AuktionPreviewPartialView" model="@m"/>
+        }
+    </div>
 
-<div class="col-lg-6">
-    @foreach (AuktionModel m in list2)
-    {
-        <partial name="_AuktionPreviewPartialView" model="@m"/>
-    }
+    <div class="col-sm-6">
+        @foreach (AuktionModel m in list2)
+        {
+            <partial name="_AuktionPreviewPartialView" model="@m"/>
+        }
+    </div>
 </div>
