Forming the auktion viewpage

--- a/Nauktion/Views/Auktion/Index.cshtml
+++ b/Nauktion/Views/Auktion/Index.cshtml
@@ -23,3 +23,12 @@
         }
     </div>
 </div>
+
+@section Scripts
+{
+    <script type="text/javascript">
+        $(function() {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
+}
