--- a/Nauktion/Views/Auktion/_AuktionPreviewPartialView.cshtml
+++ b/Nauktion/Views/Auktion/_AuktionPreviewPartialView.cshtml
@@ -1,4 +1,4 @@
-﻿@model AuktionModel
+﻿@model AuktionBudViewModel
 
 <div class="panel panel-info">
     <div class="panel-heading">
@@ -7,7 +7,7 @@
                 @Model.Titel
             </a>
             <span class="pull-right label label-success">
-                @Model.Utropspris0.ToString("C0")
+                @Model.HighestBid.ToString("C0")
             </span>
         </h3>
     </div>
