--- a/Nauktion/Views/Auktion/_AuktionPreviewPartialView.cshtml
+++ b/Nauktion/Views/Auktion/_AuktionPreviewPartialView.cshtml
@@ -7,7 +7,7 @@
                 @Model.Titel
             </a>
             <span class="pull-right label label-success">
-                @Model.HighestBid.ToString("C0")
+                @Model.MaxedPrice.ToString("C0")
             </span>
         </h3>
     </div>
